re PR c++/55931 ([C++11] Constexpr member function inside a static member is not working)

PR c++/55931
	* parser.c (cp_parser_template_argument): Don't
	fold_non_dependent_expr.

From-SVN: r196746